<resources>
    <string name="app_name">Enterprise</string>
    <string name="tabView_1">消息</string>
    <string name="tabView_2">机构</string>
    <string name="tabView_3">个人</string>

    <string name="individual_resume">个人简历</string>
    <string name="individual_organization">机构管理</string>
    <string name="individual_customer_service">客服中心</string>
    <string name="individual_settings">设置</string>
    <string name="individual_scan">扫一扫</string>
    <string name="individual_qr_code">二维码</string>

    <string name="personal_info_title">个人信息</string>
    <string name="personal_info_name">姓名</string>
    <string name="personal_info_avatar">头像</string>
    <string name="personal_info_phone">电话号码</string>
    <string name="personal_info_address">地址</string>
    <string name="personal_info_email">邮箱</string>
    <string name="personal_info_gender">性别</string>

    <string name="organization_info_title">我的机构</string>
    <string name="organization_info_home">机构主页</string>
    <string name="organization_info_dismiss">解散</string>
    <string name="organization_info_employee">机构员工</string>
    <string name="organization_info_qr_code">二维码</string>
    <string name="organization_info_identification">认证</string>

    <string name="resume_title">个人简历</string>
    <string name="editable">编辑</string>
    <string name="resume_contact">联系方式</string>
    <string name="resume_work_experience">工作经历</string>
    <string name="resume_education">教育经历</string>
    <string name="resume_specialties">我的专长</string>
    <string name="resume_add">+ 新增</string>
    <string name="delete">删除</string>
    <string name="resume_edit_info">编辑个人信息</string>
    <string name="resume_edit_name">姓名</string>
    <string name="resume_edit_gender">性别</string>
    <string name="resume_edit_address">现居地</string>
    <string name="hint_address">省/市</string>
    <string name="resume_edit_major">专业</string>
    <string name="resume_edit_save">保存</string>
    <string name="resume_edit_contact">编辑联系方式</string>
    <string name="resume_edit_contact_qq">QQ</string>
    <string name="resume_edit_contact_mail">邮箱</string>
    <string name="resume_edit_contact_phone">手机</string>
    <string name="resume_edit_spec">编辑我的专长</string>
    <string name="hint_spec">编辑你的专长</string>
    <string name="resume_spec">专长</string>
    <string name="resume_edit_work_exp">编辑工作经历</string>
    <string name="resume_edit_company">公司名称</string>
    <string name="resume_job_time">任职时间</string>
    <string name="resume_job_name">职位名称</string>
    <string name="resume_description">工作描述</string>
    <string name="resume_edit_edu_exp">编辑教育经历</string>
    <string name="resume_edu_name">学校名称</string>
    <string name="resume_edu_time">就读时间</string>
    <string name="resume_edu_major">专业名称</string>
    <string name="resume_edu_major_desc">专业描述</string>

    <string name="male">男</string>
    <string name="female">女</string>

    <string name="work_attendance_tab1">设置</string>
    <string name="work_attendance_tab2">统计</string>
    <string name="attendance_add">新增考勤组</string>
    <string name="attendance_start_time">打卡起始时间</string>
    <string name="attendance_end_time">打卡结束时间</string>
    <string name="attendance_work_day">工作日设置</string>
    <string name="work_day_1">一</string>
    <string name="work_day_2">二</string>
    <string name="work_day_3">三</string>
    <string name="work_day_4">四</string>
    <string name="work_day_5">五</string>
    <string name="work_day_6">六</string>
    <string name="work_day_7">日</string>
    <string name="until">至</string>
    <string name="attendance_count_normal">正常打卡</string>
    <string name="attendance_count_absence">未打卡</string>
    <string name="attendance_count_leave">请假</string>
    <string name="attendance_count_late">迟到</string>
    <string name="attendance_count_absenteeism">旷工</string>

    <string name="examination_tab1">待我审批</string>
    <string name="examination_tab2">已审批</string>
    <string name="examination">审批</string>
    <string name="unexamined">未审批</string>
    <string name="examined">已同意</string>

    <string name="student_title">学生</string>
    <string name="student_tab1">已毕业</string>
    <string name="student_tab2">已有班级</string>
    <string name="student_tab3">未有班级</string>
    <string name="hint_contact">请输入关键字</string>

    <string name="student_info_title">学生信息</string>
    <string name="student_info_words">留言</string>
    <string name="student_info_height">身高</string>
    <string name="student_info_guardian">监护人</string>
    <string name="student_info_show">风采展示</string>
    <string name="student_info_weight">体重</string>
    <string name="student_info_vision">视力</string>
    <string name="student_info_birthday">生日</string>
    <string name="student_info_gender">性别</string>
    <string name="student_info_flowers">累计小红花</string>
    <string name="student_info_grade">最近成绩</string>
    <string name="student_info_judgement">评价：</string>
    <string name="student_info_body_data">身体数据</string>

    <string name="request_title">申请</string>
    <string name="request_tab1">申请模板</string>
    <string name="request_tab2">我的申请</string>

    <string name="request_module_1">请假</string>
    <string name="request_module_2">新设课程</string>
    <string name="request_module_3">报销</string>
    <string name="request_module_4">立项申请</string>
    <string name="request_module_5">调课报备</string>
    <string name="request_module_6">绩效自评</string>
    <string name="request_module_7">离职</string>
    <string name="request_module_8">通用审批</string>

    <string name="ask_for_leave_title">请假</string>
    <string name="leave_submit">提交</string>
    <string name="leave_approver">审批人</string>
    <string name="leave_reason">请假原因</string>
    <string name="leave_day">请假天数</string>
    <string name="leave_end_time">结束时间</string>
    <string name="leave_start_time">开始时间</string>
    <string name="leave_type">请假类型</string>
    <string name="choose">请选择</string>

    <string name="add_employee">添加员工</string>
    <string name="add_student">添加学生</string>
    <string name="mass">群发信息</string>
    <string name="contact">联系人</string>
    <string name="send">发送</string>
    <string name="send_hint">请在此处填写信息内容</string>

    <string name="confirm">确认</string>
    <string name="personal_info_edit_name">修改用户名信息</string>
    <string name="personal_info_edit_gender">修改性别信息</string>
    <string name="personal_info_edit_address">修改地址信息"</string>
    <string name="personal_info_edit_email">修改邮箱信息</string>
    <string name="qrcode_title">我的二维码</string>
    <string name="course_mgmt">课程管理</string>
    <string name="contact_title">联系人</string>
    <string name="contacts_tab1">同事</string>
    <string name="contacts_tab2">学生家长</string>

</resources>
