<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.bearkiddiary.enterprise.ui.activity.ResumeEditInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:onClick="back"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:src="@drawable/selector_title_back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/resume_edit_info"
            android:textColor="@color/txt_title"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                style="@style/style_text_hint"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/resume_edit_name"/>
            <EditText
                android:id="@+id/et_resume_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                style="@style/style_text_hint"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/resume_edit_gender" />

            <Button
                android:id="@+id/btn_resume_gender_male"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@color/gender_normal"
                android:text="@string/male"
                android:textColor="@color/text_white" />

            <Button
                android:id="@+id/btn_resume_gender_female"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@color/gender_normal"
                android:text="@string/female"
                android:textColor="@color/text_white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                style="@style/style_text_hint"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/resume_edit_address"/>
            <EditText
                android:id="@+id/et_resume_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                android:textColorHint="@color/text_gray"
                android:padding="8dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                style="@style/style_text_hint"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/resume_edit_major"/>
            <EditText
                android:id="@+id/et_resume_major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"/>

        <Button
            android:id="@+id/btn_resume_info_save"
            style="@style/style_text_white"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_add"
            android:text="@string/resume_edit_save"/>
    </LinearLayout>

</LinearLayout>
