<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.bearkiddiary.enterprise.ui.activity.RequestActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_title_back_request"
            android:layout_width="32dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:src="@drawable/selector_title_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/request_title"
            android:textColor="@color/txt_title"
            android:textSize="20sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/bg_white"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/rl_request_tab1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_translucent"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_request_tab1"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_alignParentBottom="true"
                android:background="@color/tab_choose"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/request_tab1"
                android:textStyle="bold"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/bg_gray" />

        <RelativeLayout
            android:id="@+id/rl_request_tab2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_translucent"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_request_tab2"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_alignParentBottom="true"
                android:background="@color/tab_choose"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/request_tab2"
                android:textStyle="bold"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_request_module"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/style_text_black"
                android:background="@drawable/selector_translucent_rect_white"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/request_module_1"/>
            <TextView
                style="@style/style_text_black"
                android:background="@drawable/selector_translucent_rect_white"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/request_module_2"/>
            <TextView
                style="@style/style_text_black"
                android:background="@drawable/selector_translucent_rect_white"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/request_module_3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/style_text_black"
                android:background="@drawable/selector_translucent_rect_white"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/request_module_4"/>
            <TextView
                style="@style/style_text_black"
                android:background="@drawable/selector_translucent_rect_white"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/request_module_5"/>
            <TextView
                style="@style/style_text_black"
                android:background="@drawable/selector_translucent_rect_white"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/request_module_6"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/style_text_black"
                android:background="@drawable/selector_translucent_rect_white"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/request_module_7"/>
            <TextView
                style="@style/style_text_black"
                android:background="@drawable/selector_translucent_rect_white"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/request_module_8"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_my_request"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</LinearLayout>