<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.bearkiddiary.enterprise.ui.activity.ResumeEditContactActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_title_back_resume_edit_contact"
            android:layout_width="32dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:clickable="true"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:src="@drawable/selector_title_back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/resume_edit_contact"
            android:textColor="@color/txt_title"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                style="@style/style_text_hint"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/resume_edit_contact_phone"/>
            <EditText
                android:id="@+id/et_resume_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:background="@color/bg_white"
                android:padding="8dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                style="@style/style_text_hint"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/resume_edit_contact_mail"/>
            <EditText
                android:id="@+id/et_resume_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_white"
                android:inputType="textEmailAddress"
                android:padding="8dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                style="@style/style_text_hint"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/resume_edit_contact_qq"/>
            <EditText
                android:id="@+id/et_resume_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_white"
                android:inputType="number"
                android:padding="8dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"/>

        <Button
            android:id="@+id/btn_resume_contact_save"
            style="@style/style_text_white"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_add"
            android:text="@string/resume_edit_save"/>
    </LinearLayout>

</LinearLayout>
